[gd_scene load_steps=13 format=3 uid="uid://uho0xsnvtprn"]

[ext_resource type="PackedScene" uid="uid://mtsk35m1v8pf" path="res://wall.tscn" id="1_gt8xc"]
[ext_resource type="Script" path="res://boss_fight.gd" id="1_qnhnp"]
[ext_resource type="PackedScene" uid="uid://cnj1cv4ijgkt5" path="res://boss_player_3d.tscn" id="2_4k03r"]
[ext_resource type="PackedScene" uid="uid://dvwr1qwpi7vtj" path="res://projectile_spawner.tscn" id="3_u6ab7"]
[ext_resource type="Texture2D" uid="uid://dlglrk46pdx4c" path="res://ParticleBoard_TXR.png" id="3_vi4sn"]
[ext_resource type="Material" uid="uid://ljywyprycict" path="res://new_standard_material_3d.tres" id="4_ld8k3"]
[ext_resource type="Script" path="res://portal2.09.gd" id="7_j4qqi"]
[ext_resource type="Texture2D" uid="uid://bjurmxjvv7x7q" path="res://Dimensional_Portal.png" id="7_rrgox"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vhsr8"]
normal_enabled = true
normal_texture = ExtResource("3_vi4sn")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j8v6a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g1l7l"]
albedo_color = Color(0, 0.74902, 0, 1)
normal_enabled = true
normal_texture = ExtResource("7_rrgox")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_omq51"]

[node name="boss_fight" type="Node3D"]
script = ExtResource("1_qnhnp")

[node name="floors" type="Node3D" parent="."]
transform = Transform3D(83.333, 0, 0, 0, 1, 0, 0, 0, 81.167, 0, 0, 0)

[node name="floor" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52957e-07, -0.958055, -7.96264e-08, -5.78699, 4.18779e-08, 0, -2.21142e-14, -8.37558e-08, 0.91082, 0, 0, 0)

[node name="MeshInstance3D" parent="floors/floor" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_vhsr8")

[node name="floor2" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0, 3.78585, -0.189902)

[node name="MeshInstance3D" parent="floors/floor2" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor7" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0.264585, 3.78585, 0.243965)

[node name="MeshInstance3D" parent="floors/floor7" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor3" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0, 8.4058, -0.0775383)

[node name="MeshInstance3D" parent="floors/floor3" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor6" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0.12483, 8.4058, 0.157532)

[node name="MeshInstance3D" parent="floors/floor6" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor4" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, -0.120901, 12.944, 0.0322596)

[node name="MeshInstance3D" parent="floors/floor4" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor5" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0.13086, 12.944, -0.195281)

[node name="MeshInstance3D" parent="floors/floor5" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor8" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0.13086, 12.944, 0.00163014)

[node name="MeshInstance3D" parent="floors/floor8" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor9" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0.0273931, 17.6486, 0.044991)

[node name="MeshInstance3D" parent="floors/floor9" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor12" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, -0.0810679, 22.829, -0.0874196)

[node name="MeshInstance3D" parent="floors/floor12" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor10" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, 0.245207, 17.6486, -0.254118)

[node name="MeshInstance3D" parent="floors/floor10" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="floor11" parent="floors" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-2.52955e-07, -0.0793156, -7.52261e-09, -5.78693, 3.467e-09, 0, -2.2114e-14, -6.93398e-09, 0.0860486, -0.2263, 17.6486, 0.146243)

[node name="MeshInstance3D" parent="floors/floor11" index="1"]
surface_material_override/0 = ExtResource("4_ld8k3")

[node name="boss_player3d" parent="." instance=ExtResource("2_4k03r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.96453, 0)

[node name="walls" type="Node3D" parent="."]

[node name="wall" parent="walls" instance=ExtResource("1_gt8xc")]
transform = Transform3D(8.26751, 0, 0, 0, 132.395, 0, 0, 0, 79.6075, -38.7307, 65.9649, 0)

[node name="wall2" parent="walls" instance=ExtResource("1_gt8xc")]
transform = Transform3D(8.26751, 0, 0, 0, 132.395, 0, 0, 0, 79.6075, 38.431, 65.9649, 0)

[node name="wall3" parent="walls" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-3.61384e-07, 0, 79.6075, 0, 132.395, 0, -8.26751, 0, -3.47976e-06, -0.167343, 65.9649, -37.0348)

[node name="wall4" parent="walls" instance=ExtResource("1_gt8xc")]
transform = Transform3D(-3.61384e-07, 0, 79.6075, 0, 132.395, 0, -8.26751, 0, -3.47976e-06, -0.167343, 65.9649, 38.1298)

[node name="lights" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 142.477, 0)
shadow_opacity = 0.25

[node name="spawner" parent="." instance=ExtResource("3_u6ab7")]
transform = Transform3D(1, 0, 0, 0, -0.0969575, 0.995288, 0, -0.995288, -0.0969575, -0.539108, 19.9815, 0.640015)

[node name="spawner2" parent="." instance=ExtResource("3_u6ab7")]
transform = Transform3D(1, 0, 0, 0, -0.0969575, 0.995288, 0, -0.995288, -0.0969575, 35.4871, 5.70433, -34.0568)

[node name="spawner3" parent="." instance=ExtResource("3_u6ab7")]
transform = Transform3D(1, 0, 0, 0, -0.0969575, 0.995288, 0, -0.995288, -0.0969575, -35.2938, 5.70433, -34.0568)

[node name="spawner4" parent="." instance=ExtResource("3_u6ab7")]
transform = Transform3D(1, 0, 0, 0, -0.0969575, 0.995288, 0, -0.995288, -0.0969575, -35.2938, 5.70433, 34.393)

[node name="spawner5" parent="." instance=ExtResource("3_u6ab7")]
transform = Transform3D(1, 0, 0, 0, -0.0969575, 0.995288, 0, -0.995288, -0.0969575, 35.2752, 5.70433, 34.393)

[node name="portal" type="Node3D" parent="."]

[node name="portal1" type="Area3D" parent="portal"]
transform = Transform3D(0.741988, 0, 0.670414, 0, 1, 0, -0.670414, 0, 0.741988, -9.54681, 25.5594, -10.391)
script = ExtResource("7_j4qqi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="portal/portal1"]
transform = Transform3D(5.30844, 0, 0, 0, 2.22169, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_j8v6a")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_g1l7l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="portal/portal1"]
transform = Transform3D(5.30844, 0, 0, 0, 2.22169, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_omq51")

[connection signal="body_entered" from="portal/portal1" to="portal/portal1" method="_on_portal_1_body_entered"]

[editable path="floors/floor"]
[editable path="floors/floor2"]
[editable path="floors/floor7"]
[editable path="floors/floor3"]
[editable path="floors/floor6"]
[editable path="floors/floor4"]
[editable path="floors/floor5"]
[editable path="floors/floor8"]
[editable path="floors/floor9"]
[editable path="floors/floor12"]
[editable path="floors/floor10"]
[editable path="floors/floor11"]
